Terraform/Dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realeyez-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: realeyez
  template:
    metadata:
      labels:
        app: realeyez
    spec:
      containers:
      - name: realeyez
        image: tjwkura5/real_eyez:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
