Terraform/Dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realeyez-service-nodeport
spec:
  type: NodePort
  selector:
    app: realeyez
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
